src/themes/default/src/scss/_mega-menu.scss
/* stylelint-disable no-descending-specificity, declaration-no-important */

/* -------------------------------------
   Helpers
-------------------------------------- */
@mixin nav-items {
  > a,
  > button,
  > span,
  li > a,
  li > button {
    @content;
  }
}

@mixin link-reset {
  text-decoration: none;
  &:hover {
    text-decoration: underline;
  }
}

/* -------------------------------------
   Component
-------------------------------------- */
.bcl-mega-menu {
  &.nav-link {
    padding: 0;
  }
  > .show + .mega-menu-container.dropdown-menu {
    display: block;
  }
  .mega-menu-container.dropdown-menu {
    position: absolute;
    top: 0;
    left: 0;
    display: none;
    width: 100%;
    margin-top: 0;
    padding: 0 map-get($spacers, 3);
    border: 0;
    border-radius: 0;
    &::after {
      content: "";
      position: absolute;
      inset: 0;
      left: 50%;
      width: 100vw;
      transform: translateX(-50%);
      z-index: 1;
      background: $white;
    }
    .back-button-block {
      position: relative;
      z-index: 2;
      padding: 20px map-get($spacers, 3) 0;
      background: $primary-bg-subtle;
      .btn-link {
        @include link-reset;
      }
    }
    > .row {
      flex: 1;
    }
    .content-block {
      position: relative;
      z-index: 2;
      padding: map-get($spacers, 3);
      background: $primary-bg-subtle;
    }

    .content-link {
      @include link-reset;
    }

    /* ---------------------------------
       LEFT column – vertical tablist
    ---------------------------------- */
    .navigation-items {
      position: relative;
      z-index: 2;
      width: 100%;
      overflow: auto;
      max-height: 288px;
      @include nav-items {
        display: block;
        position: relative;
        color: $dark;
        white-space: normal;
        @include link-reset;
        &:has(svg) {
          padding-right: map-get($spacers, 5);
        }
      }
      > span {
        text-decoration: none;
        color: $dark;
        padding: map-get($spacers, "2-5") map-get($spacers, 3);
        display: block;
      }
      > a[role="tab"] {
        padding: map-get($spacers, "2-5") map-get($spacers, 3);
        &.active,
        &[aria-selected="true"] {
          pointer-events: none;
          background: $primary-bg-subtle;
        }
        > svg {
          position: absolute;
          right: 20px;
          top: 50%;
          transform: translateY(-50%);
        }
        &:after {
          display: none;
        }
      }
    }

    /* ---------------------------------
       RIGHT column – tab panels
    ---------------------------------- */
    .sub-navigation-items.tab-content {
      position: relative;
      z-index: 2;
      .tab-pane {
        padding: map-get($spacers, 3);
        ul {
          margin: 0;
          height: 294px;
          overflow: auto;
          &:has(.see-all-button) {
            li:nth-last-child(2) {
              a {
                border-bottom: 0;
              }
            }
          }
        }
        li {
          list-style: none;
          > * {
            display: block;
            padding: map-get($spacers, "2-5") map-get($spacers, 3);
            color: $dark;
            @include link-reset;
            border-bottom: 1px solid $primary-bg-subtle;
            margin: 0 map-get($spacers, "2-5");
          }
          > a {
            color: $link-color;
          }
          &:last-child {
            a {
              border-bottom: 0;
            }
          }
          .see-all-button {
            border-bottom: 0;
            position: relative;
            padding: map-get($spacers, "2-5") 0;
            display: flex;
            align-items: center;
            margin: 0;
            &:after {
              background: $neutral-border-color;
              content: "";
              height: 1px;
              left: 0;
              position: absolute;
              top: 0;
              width: 100%;
            }
            svg {
              width: 0.8rem;
            }
            span {
              text-overflow: ellipsis;
              overflow: hidden;
              display: block;
              max-width: 85%;
            }
          }
          &:has(.see-all-button) {
            margin: 0 map-get($spacers, "4-25");
            position: sticky;
            top: 100%;
          }
        }
      }
      .panel-title {
        display: none;
      }
    }
  }
}

/* -------------------------------------
   lg+ layout
-------------------------------------- */
@include media-breakpoint-up(lg) {
  .nav-item:has(> .bcl-mega-menu) {
    position: static;
  }
  .bcl-mega-menu {
    > .show + .mega-menu-container.dropdown-menu {
      display: flex;
    }
    .mega-menu-container.dropdown-menu {
      top: 100%;
      padding: map-get($spacers, "2-5") 0;
      border-bottom: var(--bs-border-width) var(--bs-border-style)
        var(--bs-border-color);
      .shadow-container {
        position: relative;
        z-index: 2;
        .shadow-bg {
          position: absolute;
          left: 50%;
          bottom: 0;
          width: 100vw;
          height: 8px;
          transform: translateX(-50%);
          box-shadow: 0 4px 5px 0 rgba(224, 229, 245, 0.5);
        }
      }
      .content-block {
        margin-right: 0;
        background: $white;
        padding-right: map-get($spacers, 4);
      }
      .navigation-items {
        @include nav-items {
          &:hover {
            text-decoration: underline;
          }
        }
        > a,
        > span {
          padding: map-get($spacers, "2-5") map-get($spacers, 3);
        }
        > a[role="tab"].active,
        > a[role="tab"][aria-selected="true"] {
          background: $primary-bg-subtle;
          pointer-events: none;
          border-left: 4px solid $primary;
          padding-left: map-get($spacers, "2-5");
          padding-right: map-get($spacers, 5);
        }
      }

      .sub-navigation-items.tab-content {
        overflow-y: auto;
        &:has(> .active) {
          background: $primary-bg-subtle;
        }
        .tab-pane {
          overflow-y: auto;
          padding: map-get($spacers, 3);
          li {
            > * {
              border-bottom: none;
            }
          }
        }
      }
    }
  }
}

/* -------------------------------------
   xl+
-------------------------------------- */
@include media-breakpoint-up(xl) {
  .bcl-mega-menu {
    .mega-menu-container.dropdown-menu {
      .content-block {
        box-shadow: none;
      }
      .shadow-container {
        height: 100%;
        position: absolute;
        right: 0;
        top: 0;
        .shadow-bg {
          left: auto;
          right: 0;
          height: 100%;
          width: 10px;
          transform: none;
          box-shadow: 4px 3px 4px 0 rgba(224, 229, 245, 0.5);
        }
      }
    }
  }

  /* -------------------------------------
    White overlay when mega menu is open
  -------------------------------------- */
  body {
    &:has(.mega-menu-container.show) {
      overflow: hidden;
      main {
        &:after {
          position: absolute;
          top: 0;
          left: 0;
          background: #fff;
          opacity: 0.5;
          width: 100%;
          height: 100%;
          content: "";
          z-index: 1060;
        }
      }
      header {
        position: relative;
        z-index: 1070;
      }
    }
  }
}

/* -------------------------------------
   Mechanism on mobile to show/hide panels
-------------------------------------- */
@include media-breakpoint-down(lg) {
  .bcl-mega-menu {
    .mega-menu-container.dropdown-menu {
      &:has(.navigation-items > .active) {
        .content-block {
          display: none;
        }
      }
      .navigation-items {
        &:has(> .active) {
          display: none;
        }
      }
      .sub-navigation-items.tab-content {
        .panel-title {
          padding: map-get($spacers, 3) map-get($spacers, 3)
            map-get($spacers, "4-5");
          margin: 0;
          color: $dark;
          background: $primary-bg-subtle;
          display: block;
          font-size: 20px;
        }
        .tab-pane {
          > li {
            > * {
              border-bottom: 1px solid $primary-bg-subtle;
            }
          }
        }
      }
    }
    &:has(.dropdown-menu.show) {
      .dropdown-toggle {
        display: none;
      }
    }
  }
}

/* -------------------------------------
    Fixes for height issues
-------------------------------------- */

@include media-breakpoint-up(lg) {
  .bcl-mega-menu {
    .content-block {
      max-height: 288px;
      overflow: auto;
    }
    .navigation-items {
      max-height: 288px;
    }
    .sub-navigation-items {
      ul {
        // Fixed in order to have see all button always at the bottom
        height: 288px;
      }
    }
  }
}

